# reporadio

./: .env.example  .gitignore  FUTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/reporadio/: __init__.py  cli.py  config.py
src/reporadio/index/: chunker.py  store.py
src/reporadio/ingest/: cache.py  fetcher.py
src/reporadio/session/: broadcaster.py  caller.py  memory.py
src/reporadio/show/: modes.py  modes.yaml  script.py
src/reporadio/show/prompts/: agent.md  answer.md  casual.md  changelog.md  desi.md  fun_roast.md  standard.md
src/reporadio/versions/: registry.py
src/reporadio/voice/: player.py  stt.py  tts.py  vad.py
src/reporadio/web/: app.py  events.py  session.py
src/reporadio/web/static/: app.js  index.html  style.css
tests/: test_caller.py  test_index.py  test_ingest.py  test_modes.py  test_script.py  test_smoke.py  test_vad.py  test_versions.py  test_web.py
