[project]
name = "reporadio"
version = "0.1.0"
description = "Talk to any GitHub repo. Out loud. An AI radio host that tours or roasts codebases."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Muhammad Junaid", email = "mrtec481@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "gitingest>=0.3.1",
    "groq>=1.5.0",
    "kokoro-onnx>=0.5.0",
    "numpy>=2.4.6",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "typer>=0.27.0",
]

[project.scripts]
reporadio = "reporadio.cli:app"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
